--- a/login/login-page.html
+++ b/login/login-page.html
@@ -15,7 +15,7 @@
 
 <h1>Login</h1>
 
-    <!-- Update a Recipe Requirement
+    <!-- Login Requirement
      
     1. Create an input element with an id of "login-input"
     2. Create an input element with an id of "password-input" 
