--- a/frontend/src/main/java/com/revature/parent/login/login-page.html
+++ b/frontend/src/main/java/com/revature/parent/login/login-page.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Recipe Management App</title>
+    <link rel="stylesheet" href="login-page.css">  
 </head>
 <body>
 
