2-5 solution done and cleaned project files

--- a/frontend/src/main/java/com/revature/parent/login/login-page.html
+++ b/frontend/src/main/java/com/revature/parent/login/login-page.html
@@ -26,6 +26,7 @@
     <input id="login-input" type="text" placeholder="Username">
     <input id="password-input" type="password" placeholder="Password">
     <button id="login-button">Login</button>
+    <button id="logout-button">Logout</button>
 
     <script src="login-page.js"></script>
 </body>
