--- a/frontend/src/main/java/com/revature/parent/login/login-page.html
+++ b/frontend/src/main/java/com/revature/parent/login/login-page.html
@@ -15,13 +15,12 @@
 
 <h1>Login</h1>
 
-    <!-- Login and Logout Requirements
+    <!-- Login Requirements
      
     1. Create an input element with an id of "login-input"
     2. Create an input element with an id of "password-input" 
     3. Create a button element with the id of "login-button" and with the text content of "Login"
-    4. Create a button element with the id of "logout-button" and with the text content of "Logout"  
-    
+ 
     -->
 
     <script src="login-page.js"></script>
