2-7 boilerplate revisions made

--- a/frontend/src/main/java/com/revature/parent/recipe/recipe-page.html
+++ b/frontend/src/main/java/com/revature/parent/recipe/recipe-page.html
@@ -14,6 +14,13 @@
 
 <body>
     <nav>
+        <!-- Link to Ingredient page
+         
+        - Create an <a> element that links to the ingredient-page.html webpage.
+        - Using CSS, ensure the display is "none"
+        - Ensure the element has an id of "admin-link"
+        -->
+
         <!-- Create a button element with the id of "logout-button" and with the text content of "Logout"  -->
     </nav>
 
