added 2-7 solution and tests

--- a/frontend/src/main/java/com/revature/parent/ingredients/ingredient-page.html
+++ b/frontend/src/main/java/com/revature/parent/ingredients/ingredient-page.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="ingredient-page.css">
 </head>
 <body>
-    <!-- Create a link back to the recipe page -->
-    <a href="../recipe/recipe-page.html">Back to recipes</a>
+    <!-- Create a link back to the recipe page with an id of "back-link" -->
+    <a href="../recipe/recipe-page.html" id="back-link">Back to recipes</a>
     <h1>Ingredients Management</h1>
 
 
