2-7 boilerplate tests added, small revisions made to backend

--- a/frontend/src/main/java/com/revature/parent/ingredients/ingredient-page.html
+++ b/frontend/src/main/java/com/revature/parent/ingredients/ingredient-page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="ingredient-page.css">
 </head>
 <body>
-    <!-- Create a link back to the recipe page -->
+    <!-- Create a link back to the recipe page with an id of "back-link" -->
 
     <h1>Ingredients Management</h1>
 
